--- a/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
@@ -14,36 +14,39 @@
 
         {% block sw_media_index_smart_bar %}
             {% block sw_media_index_bread_crumb_navigation %}
-                <div slot="smart-bar-back"
-                     class="sw-media-index__navigation">
+                <template slot="smart-bar-back">
+                    <div class="sw-media-index__navigation">
 
-                    <template v-if="parentFolder">
-                         {% block sw_media_index_bread_crumb_navigation_icon %}
-                            <router-link :to="{ name: 'sw.media.index', params: { folderId: null } }">
-                                <sw-icon class="sw-media-index__navigation-breadcrumb"
-                                         name="folder-breadcrumbs-back-to-root"
-                                         large
-                                         multicolor>
-                                </sw-icon>
-                            </router-link>
-                        {% endblock %}
+                        <template v-if="parentFolder">
+                             {% block sw_media_index_bread_crumb_navigation_icon %}
+                                <router-link :to="{ name: 'sw.media.index', params: { folderId: null } }">
+                                    <sw-icon class="sw-media-index__navigation-breadcrumb"
+                                             name="folder-breadcrumbs-back-to-root"
+                                             large
+                                             multicolor>
+                                    </sw-icon>
+                                </router-link>
+                            {% endblock %}
 
-                        {% block sw_media_index_bread_crumb_navigation_parent%}
-                            <router-link class="sw-media-index__navigation-label"
-                                         :to="{ name: 'sw.media.index', params: { folderId: currentFolder.parentId } }">
-                                {{ this.parentFolderName }}
-                            </router-link>
-                        {% endblock %}
-                    </template>
-                </div>
+                            {% block sw_media_index_bread_crumb_navigation_parent%}
+                                <router-link class="sw-media-index__navigation-label"
+                                             :to="{ name: 'sw.media.index', params: { folderId: currentFolder.parentId } }">
+                                    {{ this.parentFolderName }}
+                                </router-link>
+                            {% endblock %}
+                        </template>
+                    </div>
+                </template>
             {% endblock %}
 
             {% block sw_media_index_smart_bar_header %}
-                <h2 slot="smart-bar-header">
-                    {% block sw_media_index_smart_bar_heading %}
-                        {{ this.currentFolderName }}
-                    {% endblock %}
-                </h2>
+                <template slot="smart-bar-header">
+                    <h2>
+                        {% block sw_media_index_smart_bar_heading %}
+                            {{ this.currentFolderName }}
+                        {% endblock %}
+                    </h2>
+                </template>
             {% endblock %}
 
             <template slot="smart-bar-actions">
@@ -58,48 +61,50 @@
         {% endblock %}
 
         {% block sw_media_index_language_switch %}
-            <sw-language-switch slot="language-switch"
-                                @on-change="reloadList">
-            </sw-language-switch>
+            <template slot="language-switch">
+                <sw-language-switch @on-change="reloadList"></sw-language-switch>
+            </template>
         {% endblock %}
 
         {% block sw_media_index_page_content %}
-            <div slot="content" class="sw-media-index__page-content">
-                {% block sw_media_index_listing_grid %}
-                    <sw-upload-store-listener
-                        :uploadTag="uploadTag"
-                        @sw-media-upload-added="onUploadsAdded"
-                        @sw-media-upload-finished="onUploadFinished"
-                        @sw-media-upload-failed="onUploadFailed">
-                    </sw-upload-store-listener>
-                    <sw-media-library
-                        class="sw-media-index__media-library"
-                        :folderId="routeFolderId"
-                        :pendingUploads="uploads"
-                        :term="term"
-                        editable
-                        @media-folder-changed="updateRoute"
-                        v-model="selectedItems"
-                        ref="mediaLibrary">
-                    </sw-media-library>
-                {% endblock %}
+            <template slot="content">
+                <div class="sw-media-index__page-content">
+                    {% block sw_media_index_listing_grid %}
+                        <sw-upload-store-listener
+                            :uploadTag="uploadTag"
+                            @sw-media-upload-added="onUploadsAdded"
+                            @sw-media-upload-finished="onUploadFinished"
+                            @sw-media-upload-failed="onUploadFailed">
+                        </sw-upload-store-listener>
+                        <sw-media-library
+                            class="sw-media-index__media-library"
+                            :folderId="routeFolderId"
+                            :pendingUploads="uploads"
+                            :term="term"
+                            editable
+                            @media-folder-changed="updateRoute"
+                            v-model="selectedItems"
+                            ref="mediaLibrary">
+                        </sw-media-library>
+                    {% endblock %}
 
-                {% block sw_media_index_sidebar %}
-                    <sw-media-sidebar
-                        :items="selectedItems"
-                        :currentFolderId="routeFolderId"
-                        editable
-                        @sw-media-sidebar-items-delete="onItemsDeleted"
-                        @sw-media-sidebar-folder-items-dissolved="onMediaFoldersDissolved"
-                        @sw-media-sidebar-items-moved="reloadList"
-                        @sw-media-item-selection-remove="onMediaUnselect">
-                    </sw-media-sidebar>
-                {% endblock %}
+                    {% block sw_media_index_sidebar %}
+                        <sw-media-sidebar
+                            :items="selectedItems"
+                            :currentFolderId="routeFolderId"
+                            editable
+                            @sw-media-sidebar-items-delete="onItemsDeleted"
+                            @sw-media-sidebar-folder-items-dissolved="onMediaFoldersDissolved"
+                            @sw-media-sidebar-items-moved="reloadList"
+                            @sw-media-item-selection-remove="onMediaUnselect">
+                        </sw-media-sidebar>
+                    {% endblock %}
 
-                {% block sw_media_index_list_grid_loader %}
-                    <sw-loader v-if="isLoading"></sw-loader>
-                {% endblock %}
-            </div>
+                    {% block sw_media_index_list_grid_loader %}
+                        <sw-loader v-if="isLoading"></sw-loader>
+                    {% endblock %}
+                </div>
+            </template>
         {% endblock %}
     </sw-page>
 {% endblock %}
