NTR - Language switch disable at create / condition operator snippet renaming

--- a/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-create/sw-settings-shipping-create.html.twig
+++ b/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-create/sw-settings-shipping-create.html.twig
@@ -15,3 +15,9 @@
         {% endblock %}
     </sw-tabs>
 {% endblock %}
+
+{% block sw_settings_shipping_detail_language_switch %}
+    <sw-language-switch slot="language-switch"
+                        disabled>
+    </sw-language-switch>
+{% endblock %}
