NEXT-2308 - Add customer group module

--- a/Resources/administration/src/module/sw-settings-salutation/page/sw-settings-salutation-list/sw-settings-salutation-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-salutation/page/sw-settings-salutation-list/sw-settings-salutation-list.html.twig
@@ -186,6 +186,7 @@
                                                                :limit="limit"
                                                                :total="total"
                                                                :total-visible="7"
+                                                               :steps="steps"
                                                                @page-change="onPageChange">
                                                 </sw-pagination>
                                             </template>
